style: fixed search text overlap issue and update product hover style

--- a/assets/scss/main.css
+++ b/assets/scss/main.css
@@ -114,6 +114,16 @@ a {
   color: var(--color-primary);
 }
 
+/* global utility */
+
+.text-ellipsis {
+  white-space: nowrap;
+  display: block;
+  width: 100%;
+  text-overflow: ellipsis;
+  overflow: hidden;
+}
+
 /*****************************************************************
                         Global CSS Part :: End
 /*****************************************************************/
@@ -275,7 +285,7 @@ a .custom-button-component:hover {
   width: 100%;
   border: none;
   outline: none;
-  padding: 10px 10px;
+  padding: 10px 70px 10px 10px;
   border-top-left-radius: 4px;
   border-bottom-left-radius: 4px;
   font-size: 15px;
@@ -2039,7 +2049,7 @@ ul.social-media {
   transition: transform 300ms ease 0ms;
 }
 
-.filter_column_3 .product-card-body img:hover {
+.product-card-body:hover > .product-card-link img {
   transform: scale(1.1);
 }
 
